# bank-simulation

./: .gitignore  README.md  bank-simulation.cabal  shell.nix  stack.yaml
src/: Constants.hs  Simulator.hs  Types.hs
